// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders columns correctly for subaccount reporting users 1`] = `
Array [
  Object {
    "label": "Name",
    "sortKey": "name",
  },
  Object {
    "label": "Status",
    "sortKey": [Function],
    "width": "150px",
  },
  Object {
    "label": "Last Updated",
    "sortKey": "last_update_time",
    "width": "175px",
  },
  Object {
    "content": null,
    "width": "20px",
  },
]
`;

exports[`renders columns correctly with subaccounts 1`] = `
Array [
  Object {
    "label": "Name",
    "sortKey": "name",
  },
  Object {
    "label": "Status",
    "sortKey": [Function],
    "width": "150px",
  },
  Object {
    "label": "Subaccount",
    "sortKey": [Function],
    "width": "175px",
  },
  Object {
    "label": "Last Updated",
    "sortKey": "last_update_time",
    "width": "175px",
  },
  Object {
    "content": null,
    "width": "20px",
  },
]
`;

exports[`renders correctly 1`] = `
<Page
  empty={
    Object {
      "content": <p>
        Build, test, preview and send your transmissions.
      </p>,
      "image": [Function],
      "show": false,
      "title": "Manage your email templates",
    }
  }
  primaryAction={
    Object {
      "Component": [Function],
      "content": "Create Template",
      "to": "/templates/create",
    }
  }
  title="Templates"
>
  <TableCollection
    columns={
      Array [
        Object {
          "label": "Name",
          "sortKey": "name",
        },
        Object {
          "label": "Status",
          "sortKey": [Function],
          "width": "150px",
        },
        Object {
          "label": "Last Updated",
          "sortKey": "last_update_time",
          "width": "175px",
        },
        Object {
          "content": null,
          "width": "20px",
        },
      ]
    }
    defaultSortColumn="last_update_time"
    defaultSortDirection="desc"
    filterBox={
      Object {
        "exampleModifiers": Array [
          "id",
          "name",
        ],
        "itemToStringKeys": Array [
          "name",
          "id",
          "subaccount_id",
        ],
        "show": true,
      }
    }
    getRowData={[Function]}
    pagination={true}
    rows={
      Array [
        Object {
          "name": "Temp 1",
        },
        Object {
          "name": "Temp 2",
        },
      ]
    }
  />
</Page>
`;

exports[`renders errors when present 1`] = `
<ApiErrorBanner
  errorDetails="Uh oh! It broke. "
  message="Sorry, we seem to have had some trouble loading your templates."
  reload={
    [MockFunction] {
      "calls": Array [
        Array [],
      ],
      "results": undefined,
    }
  }
/>
`;

exports[`renders rows correctly with NO subaccounts 1`] = `
Array [
  Array [
    <Name
      id="id3"
      last_update_time="2017-08-10T14:15:16+00:00"
      name="no subs template"
      published={true}
    />,
    <Status
      id="id3"
      last_update_time="2017-08-10T14:15:16+00:00"
      name="no subs template"
      published={true}
    />,
    <LastUpdated
      id="id3"
      last_update_time="2017-08-10T14:15:16+00:00"
      name="no subs template"
      published={true}
    />,
    <Actions
      id="id3"
      last_update_time="2017-08-10T14:15:16+00:00"
      name="no subs template"
      published={true}
    />,
  ],
]
`;

exports[`renders rows correctly with subaccounts 1`] = `
Array [
  Array [
    <Name
      id="id1"
      last_update_time="2017-08-10T14:15:16+00:00"
      name="subaccount template"
      published={true}
      shared_with_subaccounts={false}
      subaccount_id={101}
    />,
    <Status
      id="id1"
      last_update_time="2017-08-10T14:15:16+00:00"
      name="subaccount template"
      published={true}
      shared_with_subaccounts={false}
      subaccount_id={101}
    />,
    <component
      id="id1"
      last_update_time="2017-08-10T14:15:16+00:00"
      name="subaccount template"
      published={true}
      shared_with_subaccounts={false}
      subaccount_id={101}
    />,
    <LastUpdated
      id="id1"
      last_update_time="2017-08-10T14:15:16+00:00"
      name="subaccount template"
      published={true}
      shared_with_subaccounts={false}
      subaccount_id={101}
    />,
    <Actions
      id="id1"
      last_update_time="2017-08-10T14:15:16+00:00"
      name="subaccount template"
      published={true}
      shared_with_subaccounts={false}
      subaccount_id={101}
    />,
  ],
  Array [
    <Name
      id="id2"
      last_update_time="2017-08-10T14:15:16+00:00"
      name="shared template"
      published={false}
      shared_with_subaccounts={true}
    />,
    <Status
      id="id2"
      last_update_time="2017-08-10T14:15:16+00:00"
      name="shared template"
      published={false}
      shared_with_subaccounts={true}
    />,
    <component
      id="id2"
      last_update_time="2017-08-10T14:15:16+00:00"
      name="shared template"
      published={false}
      shared_with_subaccounts={true}
    />,
    <LastUpdated
      id="id2"
      last_update_time="2017-08-10T14:15:16+00:00"
      name="shared template"
      published={false}
      shared_with_subaccounts={true}
    />,
    <Actions
      id="id2"
      last_update_time="2017-08-10T14:15:16+00:00"
      name="shared template"
      published={false}
      shared_with_subaccounts={true}
    />,
  ],
  Array [
    <Name
      id="id3"
      last_update_time="2017-08-10T14:15:16+00:00"
      name="master template"
      published={false}
    />,
    <Status
      id="id3"
      last_update_time="2017-08-10T14:15:16+00:00"
      name="master template"
      published={false}
    />,
    <component
      id="id3"
      last_update_time="2017-08-10T14:15:16+00:00"
      name="master template"
      published={false}
    />,
    <LastUpdated
      id="id3"
      last_update_time="2017-08-10T14:15:16+00:00"
      name="master template"
      published={false}
    />,
    <Actions
      id="id3"
      last_update_time="2017-08-10T14:15:16+00:00"
      name="master template"
      published={false}
    />,
  ],
]
`;

exports[`renders without primary action for read-only users 1`] = `
<Page
  empty={
    Object {
      "content": <p>
        Build, test, preview and send your transmissions.
      </p>,
      "image": [Function],
      "show": false,
      "title": "Manage your email templates",
    }
  }
  title="Templates"
>
  <TableCollection
    columns={
      Array [
        Object {
          "label": "Name",
          "sortKey": "name",
        },
        Object {
          "label": "Status",
          "sortKey": [Function],
          "width": "150px",
        },
        Object {
          "label": "Last Updated",
          "sortKey": "last_update_time",
          "width": "175px",
        },
        Object {
          "content": null,
          "width": "20px",
        },
      ]
    }
    defaultSortColumn="last_update_time"
    defaultSortDirection="desc"
    filterBox={
      Object {
        "exampleModifiers": Array [
          "id",
          "name",
        ],
        "itemToStringKeys": Array [
          "name",
          "id",
          "subaccount_id",
        ],
        "show": true,
      }
    }
    getRowData={[Function]}
    pagination={true}
    rows={
      Array [
        Object {
          "name": "Temp 1",
        },
        Object {
          "name": "Temp 2",
        },
      ]
    }
  />
</Page>
`;
